Upgrade to Spring Boot 4.0